Run UI tests as integration tests