@@ -59,7 +59,6 @@
 		<miglayout.version>5.1</miglayout.version>
 
 		<!-- Test dependencies -->
-		<surefire.version>3.0.0-M3</surefire.version>
 		<testfx.version>4.0.15-alpha</testfx.version>
 		<monocle.version>jdk-11+26</monocle.version>
 
@@ -185,17 +184,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<!-- Works with Java 9.0.4 and Surefire 2.20.1 -->
-				<!-- Does not work with Java 10 and Surefire 2.21.0 -->
-				<!-- Does not work with Java 10 and Surefire 2.22.0 -->
-				<version>${surefire.version}</version>
+				<!-- Version comes from parent -->
 				<configuration>
-					<skip>true</skip>
-					<forkCount>1</forkCount>
-					<reuseForks>false</reuseForks>
-					<runOrder>alphabetical</runOrder>
+					<!-- The argLine and systemPropertyVariables should match the failsafe configuration below -->
 					<argLine>
-						-Xmx128m
 						--add-opens=java.base/java.util=ALL-UNNAMED
 						--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
 						--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
@@ -215,7 +207,6 @@
 						<prism.order>sw</prism.order>
 						<!-- Not sure what this setting does but it's in all the examples found -->
 						<prism.text>t2k</prism.text>
-
 						<!-- Set java.awt.headless to true when running tests in headless mode -->
 						<java.awt.headless>true</java.awt.headless>
 					</systemPropertyVariables>
@@ -328,6 +319,57 @@
 	</build>
 
 	<profiles>
+		<profile>
+			<id>testui</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<!-- Version comes from parent -->
+						<executions>
+							<execution>
+								<id>testui</id>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+								<configuration>
+									<forkCount>1</forkCount>
+									<reuseForks>false</reuseForks>
+									<runOrder>alphabetical</runOrder>
+									<argLine>
+										-Xmx128m
+										--add-opens=java.base/java.util=ALL-UNNAMED
+										--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+										--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+										--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+									</argLine>
+									<systemPropertyVariables>
+										<!-- Set testfx.setup.timeout to a reasonable time -->
+										<!-- This might be as low as 1000 for a fast computer -->
+										<!-- This might be as high as 5000 for a slow computer -->
+										<testfx.setup.timeout>5000</testfx.setup.timeout>
+										<!-- Set testfx.headless to true to run FX tests in headless mode -->
+										<testfx.headless>true</testfx.headless>
+										<!-- Set testfx.robot to glass when running tests in headless mode -->
+										<testfx.robot>glass</testfx.robot>
+										<!-- Set prism.order to sw when running tests in headless mode -->
+										<!-- https://wiki.openjdk.java.net/display/OpenJFX/Monocle -->
+										<prism.order>sw</prism.order>
+										<!-- Not sure what this setting does but it's in all the examples found -->
+										<prism.text>t2k</prism.text>
+										<!-- Set java.awt.headless to true when running tests in headless mode -->
+										<java.awt.headless>true</java.awt.headless>
+									</systemPropertyVariables>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 		<profile>
 			<id>platform-specific-assemblies</id>
 			<build>
